# github_repo_classifier

./: .gitignore  README.md  github-repo-search-prompt.md  pyproject.toml  search_repos.sh
.omo/drafts/: github-repo-hybrid-search.md
.omo/plans/: github-repo-hybrid-search.md
.omo/start-work/: ledger.jsonl
.prd/: github-repo-hybrid-search-prd.md
src/ghrepo_search/: __init__.py  bucket.py  cli.py  corpus.py  deepening.py  eval.py  export.py  fetch.py  index.py  inventory.py  models.py  search.py
tests/: conftest.py  test_cli.py  test_inventory.py  test_package.py  test_pipeline.py
tests/fixtures/: AGENTS.md  README.md
